app/kubernetes/security/destination-rule-db.yml
apiVersion: networking.istio.io/v1beta1
kind: DestinationRule
metadata:
  name: db-rule
  namespace: dev
spec:
  host: database-service
  trafficPolicy:
    tls:
      mode: DISABLE
